// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDeleteOneRecord A. Starting from empty cache 1. Should successfully delete record and update record cache entry 1`] = `
{
  "__typename": "Person",
  "deletedAt": "2024-02-14T09:45:00Z",
  "id": "da3c2c4b-da01-4b81-9734-226069eb4cd0",
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 1. Should handle successfull record deletion 1`] = `
{
  "__typename": "Person",
  "avatarUrl": null,
  "city": "ASd",
  "company": {
    "__typename": "Company",
    "domainName": {
      "__typename": "Links",
      "primaryLinkLabel": "",
      "primaryLinkUrl": "https://linkedin.com",
      "secondaryLinks": [],
    },
    "id": "20202020-3ec3-4fe3-8997-b76aa0bfa408",
    "name": "Linkedin",
  },
  "createdAt": "2025-01-02T09:52:46.814Z",
  "createdBy": {
    "__typename": "Actor",
    "context": null,
    "name": "Tim Apple",
    "source": "MANUAL",
    "workspaceMemberId": "20202020-0687-4c41-b707-ed1bfca972a7",
  },
  "deletedAt": "2024-02-14T09:45:00Z",
  "emails": {
    "additionalEmails": [],
    "primaryEmail": "asd.com",
  },
  "id": "da3c2c4b-da01-4b81-9734-226069eb4cd0",
  "intro": "",
  "jobTitle": "",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
  "name": {
    "__typename": "FullName",
    "firstName": "Test",
    "lastName": "Test",
  },
  "noteTargets": [],
  "performanceRating": null,
  "phones": {
    "additionalPhones": [],
    "primaryPhoneCallingCode": "+33",
    "primaryPhoneCountryCode": "FR",
    "primaryPhoneNumber": "781234562",
  },
  "position": 0,
  "taskTargets": [],
  "updatedAt": "2025-01-02T09:52:46.814Z",
  "whatsapp": {
    "additionalPhones": [],
    "primaryPhoneCallingCode": "",
    "primaryPhoneCountryCode": "",
    "primaryPhoneNumber": "",
  },
  "workPreference": null,
  "xLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 1. Should handle successfull record deletion 2`] = `
{
  "__typename": "Company",
  "accountOwner": null,
  "address": {
    "__typename": "Address",
    "addressCity": "Dublin",
    "addressCountry": "Ireland",
    "addressLat": null,
    "addressLng": null,
    "addressPostcode": null,
    "addressState": null,
    "addressStreet1": "Eutaw Street",
    "addressStreet2": null,
  },
  "createdAt": "2025-02-16T08:21:51.715Z",
  "createdBy": {
    "__typename": "Actor",
    "context": {},
    "name": "Tim Apple",
    "source": "MANUAL",
    "workspaceMemberId": "20202020-0687-4c41-b707-ed1bfca972a7",
  },
  "deletedAt": null,
  "domainName": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "https://linkedin.com",
    "secondaryLinks": [],
  },
  "employees": null,
  "id": "20202020-3ec3-4fe3-8997-b76aa0bfa408",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
  "name": "Linkedin",
  "noteTargets": [],
  "opportunities": [
    {},
  ],
  "people": [
    {
      "__typename": "Person",
      "avatarUrl": null,
      "id": "20202020-1c0e-494c-a1b6-85b1c6fefaa5",
      "name": {
        "__typename": "FullName",
        "firstName": "Christoph",
        "lastName": "Callisto",
      },
    },
    {
      "__typename": "Person",
      "id": "20202020-ac73-4797-824e-87a1f5aea9e0",
      "name": {
        "__typename": "FullName",
        "firstName": "Sylvie",
        "lastName": "Palmer",
      },
    },
  ],
  "position": 1,
  "taskTargets": [],
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 2. Should handle optimistic cache on record deletion 1`] = `
{
  "__typename": "Person",
  "avatarUrl": null,
  "city": "ASd",
  "company": {
    "__typename": "Company",
    "domainName": {
      "__typename": "Links",
      "primaryLinkLabel": "",
      "primaryLinkUrl": "https://linkedin.com",
      "secondaryLinks": [],
    },
    "id": "20202020-3ec3-4fe3-8997-b76aa0bfa408",
    "name": "Linkedin",
  },
  "createdAt": "2025-01-02T09:52:46.814Z",
  "createdBy": {
    "__typename": "Actor",
    "context": null,
    "name": "Tim Apple",
    "source": "MANUAL",
    "workspaceMemberId": "20202020-0687-4c41-b707-ed1bfca972a7",
  },
  "deletedAt": Any<String>,
  "emails": {
    "additionalEmails": [],
    "primaryEmail": "asd.com",
  },
  "id": "da3c2c4b-da01-4b81-9734-226069eb4cd0",
  "intro": "",
  "jobTitle": "",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
  "name": {
    "__typename": "FullName",
    "firstName": "Test",
    "lastName": "Test",
  },
  "noteTargets": [],
  "performanceRating": null,
  "phones": {
    "additionalPhones": [],
    "primaryPhoneCallingCode": "+33",
    "primaryPhoneCountryCode": "FR",
    "primaryPhoneNumber": "781234562",
  },
  "position": 0,
  "taskTargets": [],
  "updatedAt": "2025-01-02T09:52:46.814Z",
  "whatsapp": {
    "additionalPhones": [],
    "primaryPhoneCallingCode": "",
    "primaryPhoneCountryCode": "",
    "primaryPhoneNumber": "",
  },
  "workPreference": null,
  "xLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 2. Should handle optimistic cache on record deletion 2`] = `
{
  "__typename": "Company",
  "accountOwner": null,
  "address": {
    "__typename": "Address",
    "addressCity": "Dublin",
    "addressCountry": "Ireland",
    "addressLat": null,
    "addressLng": null,
    "addressPostcode": null,
    "addressState": null,
    "addressStreet1": "Eutaw Street",
    "addressStreet2": null,
  },
  "createdAt": "2025-02-16T08:21:51.715Z",
  "createdBy": {
    "__typename": "Actor",
    "context": {},
    "name": "Tim Apple",
    "source": "MANUAL",
    "workspaceMemberId": "20202020-0687-4c41-b707-ed1bfca972a7",
  },
  "deletedAt": null,
  "domainName": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "https://linkedin.com",
    "secondaryLinks": [],
  },
  "employees": null,
  "id": "20202020-3ec3-4fe3-8997-b76aa0bfa408",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
  "name": "Linkedin",
  "noteTargets": [],
  "opportunities": [
    {},
  ],
  "people": [
    {
      "__typename": "Person",
      "avatarUrl": null,
      "id": "20202020-1c0e-494c-a1b6-85b1c6fefaa5",
      "name": {
        "__typename": "FullName",
        "firstName": "Christoph",
        "lastName": "Callisto",
      },
    },
    {
      "__typename": "Person",
      "id": "20202020-ac73-4797-824e-87a1f5aea9e0",
      "name": {
        "__typename": "FullName",
        "firstName": "Sylvie",
        "lastName": "Palmer",
      },
    },
  ],
  "position": 1,
  "taskTargets": [],
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 3. Should handle optimistic cache rollback on record deletion failure 1`] = `
{
  "__typename": "Person",
  "avatarUrl": null,
  "city": "ASd",
  "company": {
    "__typename": "Company",
    "domainName": {
      "__typename": "Links",
      "primaryLinkLabel": "",
      "primaryLinkUrl": "https://linkedin.com",
      "secondaryLinks": [],
    },
    "id": "20202020-3ec3-4fe3-8997-b76aa0bfa408",
    "name": "Linkedin",
  },
  "createdAt": "2025-01-02T09:52:46.814Z",
  "createdBy": {
    "__typename": "Actor",
    "context": null,
    "name": "Tim Apple",
    "source": "MANUAL",
    "workspaceMemberId": "20202020-0687-4c41-b707-ed1bfca972a7",
  },
  "deletedAt": null,
  "emails": {
    "additionalEmails": [],
    "primaryEmail": "asd.com",
  },
  "id": "da3c2c4b-da01-4b81-9734-226069eb4cd0",
  "intro": "",
  "jobTitle": "",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
  "name": {
    "__typename": "FullName",
    "firstName": "Test",
    "lastName": "Test",
  },
  "noteTargets": [],
  "performanceRating": null,
  "phones": {
    "additionalPhones": [],
    "primaryPhoneCallingCode": "+33",
    "primaryPhoneCountryCode": "FR",
    "primaryPhoneNumber": "781234562",
  },
  "position": 0,
  "taskTargets": [],
  "updatedAt": "2025-01-02T09:52:46.814Z",
  "whatsapp": {
    "additionalPhones": [],
    "primaryPhoneCallingCode": "",
    "primaryPhoneCountryCode": "",
    "primaryPhoneNumber": "",
  },
  "workPreference": null,
  "xLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 3. Should handle optimistic cache rollback on record deletion failure 2`] = `
{
  "__typename": "Company",
  "accountOwner": null,
  "address": {
    "__typename": "Address",
    "addressCity": "Dublin",
    "addressCountry": "Ireland",
    "addressLat": null,
    "addressLng": null,
    "addressPostcode": null,
    "addressState": null,
    "addressStreet1": "Eutaw Street",
    "addressStreet2": null,
  },
  "createdAt": "2025-02-16T08:21:51.715Z",
  "createdBy": {
    "__typename": "Actor",
    "context": {},
    "name": "Tim Apple",
    "source": "MANUAL",
    "workspaceMemberId": "20202020-0687-4c41-b707-ed1bfca972a7",
  },
  "deletedAt": null,
  "domainName": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "https://linkedin.com",
    "secondaryLinks": [],
  },
  "employees": null,
  "id": "20202020-3ec3-4fe3-8997-b76aa0bfa408",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
  "name": "Linkedin",
  "noteTargets": [],
  "opportunities": [
    {},
  ],
  "people": [
    {
      "__typename": "Person",
      "avatarUrl": null,
      "id": "20202020-1c0e-494c-a1b6-85b1c6fefaa5",
      "name": {
        "__typename": "FullName",
        "firstName": "Christoph",
        "lastName": "Callisto",
      },
    },
    {
      "__typename": "Person",
      "id": "20202020-ac73-4797-824e-87a1f5aea9e0",
      "name": {
        "__typename": "FullName",
        "firstName": "Sylvie",
        "lastName": "Palmer",
      },
    },
  ],
  "position": 1,
  "taskTargets": [],
}
`;
